[package]
name = "sse_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
regex = "1.5"
serde_json = "1"
anyhow = "1.0"
time = { version = "0.3", features = ["macros", "local-offset", "parsing"]}

[dev-dependencies]
tokio-test = "*"